Now loads the SpellDispelType.dbc and updates the type in the spell overview for each spell selected. Not yet implemented saving if this is changed.

--- a/SpellGUIV2/SpellGUIV2.csproj
+++ b/SpellGUIV2/SpellGUIV2.csproj
@@ -67,6 +67,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="SpellDBC.cs" />
+    <Compile Include="SpellDispelType.cs" />
     <Compile Include="SpellIconDBC.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
