--- a/SpellGUIV2/SpellGUIV2.csproj
+++ b/SpellGUIV2/SpellGUIV2.csproj
@@ -69,6 +69,7 @@
     <Compile Include="SpellDBC.cs" />
     <Compile Include="SpellDispelType.cs" />
     <Compile Include="SpellIconDBC.cs" />
+    <Compile Include="SpellMechanic.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
