When creating a new spell (copy of some other), there wont be any errors because the name used to be empty.
Hotfixed few changes from one of the earliest commits that broke the Save function.
Currently only English locale values are used for SpellName etc., cbb with that, just wanted this to work finally.

--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -87,6 +87,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Sources\Constants\Targets.cs" />
+    <Compile Include="Sources\Constants\TextFlags.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
