Rewrite the GUI so that all control's are thread safe. This means that when a spell is selected or updated it can be done as a background task and thus it updates smoothly rather than the previous 5 second pauses while it loads.

--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -89,6 +89,9 @@
     </ApplicationDefinition>
     <Compile Include="Sources\Constants\Targets.cs" />
     <Compile Include="Sources\Constants\TextFlags.cs" />
+    <Compile Include="Sources\Controls\ThreadSafeCheckBox.cs" />
+    <Compile Include="Sources\Controls\ThreadSafeComboBox.cs" />
+    <Compile Include="Sources\Controls\ThreadSafeTextBox.cs" />
     <Compile Include="Sources\DBC\AreaGroup.cs" />
     <Compile Include="Sources\DBC\ItemClass.cs" />
     <Compile Include="Sources\DBC\SpellCastTimes.cs" />
