--- a/SpellGUIV2/packages.config
+++ b/SpellGUIV2/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-	<package id="MahApps.Metro" version="0.14.0-ALPHA17" targetFramework="net45"/>
-	<package id="MahApps.Metro.Resources" version="0.2.1.0" targetFramework="net45"/>
+  <package id="MahApps.Metro" version="0.14.0-ALPHA17" targetFramework="net45" />
+  <package id="MahApps.Metro.Resources" version="0.2.1.0" targetFramework="net45" />
+  <package id="MySql.Data" version="6.9.7" targetFramework="net45" />
 </packages>
