--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -92,7 +92,7 @@
     </ApplicationDefinition>
     <Compile Include="Sources\Config\Config.cs" />
     <Compile Include="Sources\Constants\Targets.cs" />
-    <Compile Include="Sources\Constants\TextFlags.cs" />
+    <Compile Include="Sources\Controls\TextFlags.cs" />
     <Compile Include="Sources\Controls\ThreadSafeCheckBox.cs" />
     <Compile Include="Sources\Controls\ThreadSafeComboBox.cs" />
     <Compile Include="Sources\Controls\ThreadSafeTextBox.cs" />
