Early implementation of a spell string parser: - I have started working my way through Vel's tag documentation to create a spell string parser. When selecting a spell it will attempt to parse the spell description into a real string format with all the spell tags parsed. e.g:  will be converted into the spells duration. - I am currently testing two ways:     A) All spells in the spell DBC are parsed on startup, and then discarded. This is used for debugging and will be removed with a release.     B) When a spell is selected its parsed spell description is displayed on the GUI.

--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Sources\DBC\SpellRuneCost.cs" />
     <Compile Include="Sources\DBC\TotemCategory.cs" />
     <Compile Include="Sources\MySQL\MySQL.cs" />
+    <Compile Include="Sources\SpellStringTools\SpellStringParser.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -160,6 +161,7 @@
   <ItemGroup>
     <Resource Include="icon.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
