Handle dbc: Handle as AreaTable.dbc.

--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Sources\Controls\ThreadSafeComboBox.cs" />
     <Compile Include="Sources\Controls\ThreadSafeTextBox.cs" />
     <Compile Include="Sources\DBC\AreaGroup.cs" />
+    <Compile Include="Sources\DBC\AreaTable.cs" />
     <Compile Include="Sources\DBC\ItemClass.cs" />
     <Compile Include="Sources\DBC\SpellCastTimes.cs" />
     <Compile Include="Sources\DBC\SpellCategory.cs" />
