Convert MySQL and SQLite to be based of the DBAdapter interface

--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -121,6 +121,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Sources\Config\Config.cs" />
+    <Compile Include="Sources\Config\DBAdapter.cs" />
     <Compile Include="Sources\Constants\Targets.cs" />
     <Compile Include="Sources\Controls\TextFlags.cs" />
     <Compile Include="Sources\Controls\ThreadSafeCheckBox.cs" />
