--- a/SpellGUIV2/packages.config
+++ b/SpellGUIV2/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="1.6.2" targetFramework="net451" developmentDependency="true" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net451" />
+  <package id="Fody" version="2.0.0" targetFramework="net451" developmentDependency="true" />
   <package id="MahApps.Metro" version="0.14.0-ALPHA17" targetFramework="net45" />
   <package id="MahApps.Metro.Resources" version="0.2.1.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.7" targetFramework="net45" />
