Begin refactoring DBC classes to be object orientated

--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -193,6 +193,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <Compile Include="Sources\DBC\AbstractDBC.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
