--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -124,6 +124,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Sources\Binding\Binding.cs" />
+    <Compile Include="Sources\Binding\BindingType.cs" />
+    <Compile Include="Sources\Binding\BindingEntry.cs" />
+    <Compile Include="Sources\Binding\BindingManager.cs" />
     <Compile Include="Sources\Config\Config.cs" />
     <Compile Include="Sources\Config\DBAdapter.cs" />
     <Compile Include="Sources\Constants\Locale.cs" />
