--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -132,7 +132,7 @@
     <Compile Include="Sources\Binding\BindingEntry.cs" />
     <Compile Include="Sources\Binding\BindingManager.cs" />
     <Compile Include="Sources\Config\Config.cs" />
-    <Compile Include="Sources\Config\IDatabaseAdapter.cs" />
+    <Compile Include="Sources\Database\IDatabaseAdapter.cs" />
     <Compile Include="Sources\Constants\Locale.cs" />
     <Compile Include="Sources\Constants\Targets.cs" />
     <Compile Include="Sources\Constants\TextFlags.cs" />
@@ -158,10 +158,10 @@
     <Compile Include="Sources\DBC\SpellRange.cs" />
     <Compile Include="Sources\DBC\SpellRuneCost.cs" />
     <Compile Include="Sources\DBC\TotemCategory.cs" />
-    <Compile Include="Sources\MySQL\MySQL.cs" />
+    <Compile Include="Sources\Database\MySQL.cs" />
     <Compile Include="Sources\Tools\SpellStringTools\SpellFamilyClassMaskParser.cs" />
     <Compile Include="Sources\Tools\SpellStringTools\SpellStringReferenceResolver.cs" />
-    <Compile Include="Sources\SQLite\SQLite.cs" />
+    <Compile Include="Sources\Database\SQLite.cs" />
     <Compile Include="Sources\Tools\SpellStringTools\SpellStringParser.cs" />
     <Compile Include="Sources\Tools\SpellStringTools\Token.cs" />
     <Compile Include="Sources\Tools\SpellStringTools\TokenType.cs" />
