Includes a number of minor updates:
- Fix console output not flushing on program close. This caused not all the console output to get written when terminating the program.
- Add DBC reading verification to ensure the binding field count matches the DBC header field count.
- Fix a table getting created with the name `{0}`.
- Add a GenericDbc class so that any binding can now be created to import any DBC of any version <= 3.3.5a.

--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Sources\Controls\ThreadSafeComboBox.cs" />
     <Compile Include="Sources\Controls\ThreadSafeTextBox.cs" />
     <Compile Include="Sources\DBC\AreaGroup.cs" />
+    <Compile Include="Sources\DBC\GenericDbc.cs" />
     <Compile Include="Sources\DBC\AreaTable.cs" />
     <Compile Include="Sources\DBC\DBCReader.cs" />
     <Compile Include="Sources\DBC\ItemClass.cs" />
