Performance improvement by centralising blp image loading
The spell selection list and icon tab will not load their own copies into memory but rather share a single resource through the BlpManager.

--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Sources\Binding\BindingType.cs" />
     <Compile Include="Sources\Binding\BindingEntry.cs" />
     <Compile Include="Sources\Binding\BindingManager.cs" />
+    <Compile Include="Sources\BLP\BlpManager.cs" />
     <Compile Include="Sources\Config\Config.cs" />
     <Compile Include="Sources\Database\IDatabaseAdapter.cs" />
     <Compile Include="Sources\Constants\Locale.cs" />
