--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -140,6 +140,12 @@
     <Compile Include="Sources\BLP\BlpManager.cs" />
     <Compile Include="Sources\Config\Config.cs" />
     <Compile Include="Sources\Controls\FriendlyLabel.cs" />
+    <Compile Include="Sources\DBC\SpellVisualKitModelAttach.cs" />
+    <Compile Include="Sources\DBC\SpellVisualPrecastTransitions.cs" />
+    <Compile Include="Sources\DBC\SpellVisualKitAreaModel.cs" />
+    <Compile Include="Sources\DBC\SpellVisualEffectName.cs" />
+    <Compile Include="Sources\DBC\SpellVisual.cs" />
+    <Compile Include="Sources\DBC\SpellVisualKit.cs" />
     <Compile Include="Sources\VersionControl\WoWVersion.cs" />
     <Compile Include="Sources\Controls\IBoxContentProvider.cs" />
     <Compile Include="Sources\Controls\DBCBoxContainer.cs" />
