--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -139,8 +139,10 @@
     <Compile Include="Sources\Binding\BindingManager.cs" />
     <Compile Include="Sources\BLP\BlpManager.cs" />
     <Compile Include="Sources\Config\Config.cs" />
+    <Compile Include="Sources\Controls\FilteredComboBox.cs" />
     <Compile Include="Sources\Controls\FriendlyLabel.cs" />
     <Compile Include="Sources\Controls\KitListEntry.cs" />
+    <Compile Include="Sources\DBC\AnimationData.cs" />
     <Compile Include="Sources\DBC\SpellVisualKitModelAttach.cs" />
     <Compile Include="Sources\DBC\SpellVisualPrecastTransitions.cs" />
     <Compile Include="Sources\DBC\SpellVisualKitAreaModel.cs" />
