--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -141,7 +141,8 @@
     <Compile Include="Sources\Config\Config.cs" />
     <Compile Include="Sources\Controls\FilteredComboBox.cs" />
     <Compile Include="Sources\Controls\FriendlyLabel.cs" />
-    <Compile Include="Sources\Controls\KitListEntry.cs" />
+    <Compile Include="Sources\Controls\VisualEffectListEntry.cs" />
+    <Compile Include="Sources\Controls\VisualKitListEntry.cs" />
     <Compile Include="Sources\DBC\AnimationData.cs" />
     <Compile Include="Sources\DBC\SpellVisualKitModelAttach.cs" />
     <Compile Include="Sources\DBC\SpellVisualPrecastTransitions.cs" />
