Add partial copy, paste, delete for spell visual effects
Refactors common visual list entry code into a new abstract class.

--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Sources\Config\Config.cs" />
     <Compile Include="Sources\Controls\Common\FilteredComboBox.cs" />
     <Compile Include="Sources\Controls\Common\FriendlyLabel.cs" />
+    <Compile Include="Sources\Controls\Visual\AbstractVisualListEntry.cs" />
     <Compile Include="Sources\Controls\Visual\IVisualListEntry.cs" />
     <Compile Include="Sources\Controls\Visual\VisualContextMenu.cs" />
     <Compile Include="Sources\Controls\Visual\VisualPasteListEntry.cs" />
