--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "stormlibsharp"]
 	path = stormlibsharp
-	url = https://github.com/robpaveza/stormlibsharp.git
+	url = https://github.com/stoneharry/stormlibsharp
