--- a/SpellGUIV2/packages.config
+++ b/SpellGUIV2/packages.config
@@ -8,6 +8,7 @@
   <package id="MahApps.Metro.Resources" version="0.2.1.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.7" targetFramework="net45" />
   <package id="NLog" version="4.7.0" targetFramework="net451" />
+  <package id="SSH.NET" version="2020.0.1" targetFramework="net451" />
   <package id="System.Data.SQLite" version="1.0.104.0" targetFramework="net451" userInstalled="true" />
   <package id="System.Data.SQLite.Core" version="1.0.104.0" targetFramework="net451" />
   <package id="System.Data.SQLite.EF6" version="1.0.104.0" targetFramework="net451" />
