--- a/SpellGUIV2/packages.config
+++ b/SpellGUIV2/packages.config
@@ -1,15 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.5" targetFramework="net452" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net451" />
   <package id="Costura.Fody" version="1.6.2" targetFramework="net451" developmentDependency="true" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net451" />
   <package id="Fody" version="2.0.0" targetFramework="net451" developmentDependency="true" />
+  <package id="Google.Protobuf" version="3.14.0" targetFramework="net452" />
+  <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net452" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net452" />
+  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.3.0" targetFramework="net451" />
   <package id="MahApps.Metro.Resources" version="0.2.1.0" targetFramework="net45" />
-  <package id="MySql.Data" version="6.9.7" targetFramework="net45" />
+  <package id="MySql.Data" version="8.0.27" targetFramework="net452" />
   <package id="NLog" version="4.7.0" targetFramework="net451" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.104.0" targetFramework="net451" userInstalled="true" />
   <package id="System.Data.SQLite.Core" version="1.0.104.0" targetFramework="net451" />
   <package id="System.Data.SQLite.EF6" version="1.0.104.0" targetFramework="net451" />
   <package id="System.Data.SQLite.Linq" version="1.0.104.0" targetFramework="net451" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net452" />
 </packages>
