--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -77,7 +77,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>D074FCD8783D9D3959BF856D474D6937665C5AB5</ManifestCertificateThumbprint>
@@ -304,7 +304,6 @@
     </None>
     <AppDesigner Include="Properties\" />
     <Compile Include="Sources\DBC\AbstractDBC.cs" />
-    <None Include="SpellEditor_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
