SQL Exporter, DBC Handling Refactor, Performance Improvements (#212)
* Refactoring of SQL export
* Create AdapterFactory, make disposable, create new instance for SQL export
* Refactor of AbstractDBC
* Allow for emulator config files to map to columns
* Performance improvements for import/export
* Update project VS version
* Include Stationery binding file

---------

Co-authored-by: stoneharry

--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -184,8 +184,15 @@
     <Compile Include="Sources\Controls\Visual\VisualPasteListEntry.cs" />
     <Compile Include="Sources\Controls\Visual\VisualEffectListEntry.cs" />
     <Compile Include="Sources\Controls\Visual\VisualKitListEntry.cs" />
+    <Compile Include="Sources\Database\SqlFileStorage.cs" />
+    <Compile Include="Sources\Database\CsvFileStorage.cs" />
+    <Compile Include="Sources\Database\DbcFileStorage.cs" />
+    <Compile Include="Sources\Database\StorageAdapter.cs" />
+    <Compile Include="Sources\Database\StorageFactory.cs" />
     <Compile Include="Sources\Database\ImportExportType.cs" />
+    <Compile Include="Sources\Database\AdapterFactory.cs" />
     <Compile Include="Sources\DBC\AnimationData.cs" />
+    <Compile Include="Sources\DBC\DBCBodyToSerialize.cs" />
     <Compile Include="Sources\DBC\MutableGenericDbc.cs" />
     <Compile Include="Sources\DBC\SpellVisualKitModelAttach.cs" />
     <Compile Include="Sources\Tools\MPQ\MpqExport.cs" />
