--- a/SpellGUIV2/packages.config
+++ b/SpellGUIV2/packages.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.9" targetFramework="net452" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net451" />
